[gd_scene load_steps=9 format=3 uid="uid://ben3ewal3r0vk"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ru7ju"]
[ext_resource type="Texture2D" uid="uid://dkj4hwul25eij" path="res://art/LostHeart.jpg" id="2_58asp"]
[ext_resource type="FontFile" uid="uid://bekn0vgx22mbc" path="res://fonts/century-gothic/GOTHICB.TTF" id="3_qiotv"]
[ext_resource type="FontFile" uid="uid://vv01ikl12mma" path="res://fonts/century-gothic/Century Gothic.ttf" id="4_x0w77"]
[ext_resource type="PackedScene" uid="uid://bddt32ryei1m0" path="res://scenes/controls.tscn" id="5_g7cx1"]
[ext_resource type="PackedScene" uid="uid://pxoxxxy6b427" path="res://scenes/credits.tscn" id="6_x3ui5"]
[ext_resource type="PackedScene" uid="uid://cs1n8ve01vbp" path="res://scenes/tutorial.tscn" id="7_44kiy"]
[ext_resource type="AudioStream" uid="uid://cwt2kgkit6yov" path="res://music/Ascension_Boss_MusicBox_Credits.mp3" id="8_gqmg0"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_ru7ju")

[node name="BG" type="TextureRect" parent="."]
modulate = Color(0.682353, 0.878431, 0.878431, 1)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.997
offset_left = -10.0
offset_top = -2.0
offset_right = 10.0
offset_bottom = 1.94403
texture = ExtResource("2_58asp")
expand_mode = 1

[node name="Title" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.21
anchor_top = 0.154
anchor_right = 0.759
anchor_bottom = 0.293
offset_left = -2.91998
offset_top = -23.792
offset_right = -3.36804
offset_bottom = 13.136
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qiotv")
theme_override_font_sizes/font_size = 100
text = "LOST HEART"
horizontal_alignment = 1

[node name="Play" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.395
anchor_right = 0.576
anchor_bottom = 0.472
offset_left = -65.256
offset_top = 124.04
offset_right = -64.552
offset_bottom = 124.144
theme_override_fonts/font = ExtResource("4_x0w77")
theme_override_font_sizes/font_size = 20
text = "PLAY"

[node name="Tutorial" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.494
anchor_right = 0.576
anchor_bottom = 0.571
offset_left = 3.74402
offset_top = 133.888
offset_right = 4.448
offset_bottom = 133.992
theme_override_fonts/font = ExtResource("4_x0w77")
theme_override_font_sizes/font_size = 20
text = "TUTORIAL"

[node name="Controls" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.593
anchor_right = 0.576
anchor_bottom = 0.67
offset_left = 409.744
offset_top = 78.736
offset_right = 410.448
offset_bottom = 78.84
theme_override_fonts/font = ExtResource("4_x0w77")
theme_override_font_sizes/font_size = 20
text = "CONTROLS"

[node name="Credits" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.691
anchor_right = 0.576
anchor_bottom = 0.769
offset_left = 471.744
offset_top = -54.768
offset_right = 472.448
offset_bottom = -55.312
theme_override_fonts/font = ExtResource("4_x0w77")
theme_override_font_sizes/font_size = 20
text = "CREDITS"

[node name="controls" parent="." instance=ExtResource("5_g7cx1")]
unique_name_in_owner = true
visible = false

[node name="credits" parent="." instance=ExtResource("6_x3ui5")]
unique_name_in_owner = true
visible = false

[node name="tutorial" parent="." instance=ExtResource("7_44kiy")]
unique_name_in_owner = true
visible = false

[node name="credits_music" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_gqmg0")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
